# skies

./: .clang-format  .clangd  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  devenv.nix  devenv.yaml  secretspec.toml
api/v1/: Error.proto
api/v1/containers/: Request.proto  Response.proto
docs/: BUILDING.md  CODE_OF_CONDUCT.md
src/: EntryPoint.cpp
src/client/: DockerClient.cpp  DockerClient.hpp
src/core/: Logger.hpp  Router.cpp  Router.hpp  Server.cpp  Server.hpp
src/handlers/: Containers.cpp  Containers.hpp  Error.hpp
src/middleware/: DockerClient.cpp  DockerClient.hpp  DockerMiddleware.cpp  DockerMiddleware.hpp
src/schema/: Request.schema.hpp  Response.schema.hpp
src/utility/: Json.hpp  Parameter.hpp  PopQuery.hpp  ProtoBuffer.cpp  ProtoBuffer.hpp  Query.hpp  QueryBuilder.hpp  ResponseBuilder.hpp  SafeFunc.hpp  Shorthands.hpp
